force-app/main/default/objects/Opportunity/fields/Calculated_Cost_Men_s__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Cost_Men_s__c</fullName>
    <description>If the sum of the 5 Men&apos;s and 3 Women&apos;s Divisions is equal to 0, the formula returns $0.
Cost Calculation:
If there&apos;s only one team (i.e., the sum is equal to 1), it returns the cost for the first team (Cost_1st_Team__c).
If there are multiple teams (sum is greater than 1), it calculates the cost based on the first team cost and the additional teams cost (Cost_Additional_Teams__c), adjusting for the first team&apos;s cost already counted</description>
    <formula>IF(
(Mens_Club__c + Mens_Open__c + Mens_Social__c + Mens_EGU__c + Mens_NSCS__c + Womens_Club__c +
Womens_Social__c + Womens_NSCS__c) == 0,
0,
IF(
(Mens_Club__c + Mens_Open__c + Mens_Social__c + Mens_EGU__c + Mens_NSCS__c + Womens_Club__c +
Womens_Social__c + Womens_NSCS__c) == 1,
Cost_1st_Team__c,
(Cost_1st_Team__c + ((Mens_Club__c + Mens_Open__c + Mens_Social__c + Mens_EGU__c + Mens_NSCS__c +
Womens_Club__c + Womens_Social__c + Womens_NSCS__c) - 1) * Cost_Additional_Teams__c)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated dynamically from number of teams entered and cost per team</inlineHelpText>
    <label>Calculated Cost - Men&apos;s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>