force-app/main/default/objects/Opportunity/fields/Cost_1st_Team__c.field-meta.xml
<CustomField>
    <fullName>Cost_1st_Team__c</fullName>
    <description>Cost of 1st team. Directly copied from the same field on Campaign record</description>
    <formula>Campaign.Cost_1st_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost of 1st team. Directly copied from the same field on Campaign record</inlineHelpText>
    <label>Cost - 1st Team</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>