force-app/main/default/objects/Opportunity/fields/Cost_Additional_Teams__c.field-meta.xml
<CustomField>
    <fullName>Cost_Additional_Teams__c</fullName>
    <description>Cost of additional teams after the 1st team. Directly copied from the same field on Campaign record</description>
    <formula>Campaign.Cost_Additional_Teams__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost of additional teams after the 1st team. Directly copied from the same field on Campaign record</inlineHelpText>
    <label>Cost - Additional Teams</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>