force-app/main/default/objects/Opportunity/fields/Invoice_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Recipient__c</fullName>
    <description>Invoice Email Recipient (Only if different from main POC. Athletic Director, President, etc)</description>
    <inlineHelpText>Invoice Email Recipient (Only if different from main POC. Athletic Director, President, etc)</inlineHelpText>
    <label>Invoice Email Recipient</label>
    <type>Email</type>
</CustomField>