force-app/main/default/objects/Opportunity/fields/Manual_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amount will auto-populate depending on number of teams entered. Check this box to override that value (discount or free entries, etc)</description>
    <inlineHelpText>Amount will auto-populate depending on number of teams entered. Check this box to override that value (discount or free entries, etc)</inlineHelpText>
    <label>Manual Override Amount</label>
    <type>Checkbox</type>
</CustomField>