force-app/main/default/objects/Opportunity/fields/Mens_Club__c.field-meta.xml
<CustomField>
    <fullName>Mens_Club__c</fullName>
    <description>Number of Men&apos;s Club Registered</description>
    <label>Men&apos;s Club</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>