force-app/main/default/objects/Opportunity/fields/Mens_College_Club_Small__c.field-meta.xml
<CustomField>
    <fullName>Mens_College_Club_Small__c</fullName>
    <description>Men&apos;s College Club (Small)</description>
    <label>Men&apos;s College Club (Small)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>