force-app/main/default/objects/Opportunity/fields/Mens_College_Open_Large__c.field-meta.xml
<CustomField>
    <fullName>Mens_College_Open_Large__c</fullName>
    <description>Men&apos;s College Open (Large)</description>
    <label>Men&apos;s College Open (Large)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>