force-app/main/default/objects/Opportunity/fields/Mens_College_Social__c.field-meta.xml
<CustomField>
    <fullName>Mens_College_Social__c</fullName>
    <description>Men&apos;s College Social</description>
    <label>Men&apos;s College Social</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>