force-app/main/default/objects/Opportunity/fields/Mens_EGU__c.field-meta.xml
<CustomField>
    <fullName>Mens_EGU__c</fullName>
    <description>Number of EGU Men&apos;s Seven Series (Invite Only)</description>
    <inlineHelpText>Number of EGU Men&apos;s Seven Series (Invite Only)</inlineHelpText>
    <label>Men&apos;s EGU</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>