force-app/main/default/objects/Opportunity/fields/Mens_NSCS__c.field-meta.xml
<CustomField>
    <fullName>Mens_NSCS__c</fullName>
    <description>Number of NSCS Men&apos;s Registered (Invite Only)</description>
    <inlineHelpText>Number of NSCS Men&apos;s Registered (Invite Only)</inlineHelpText>
    <label>Men&apos;s NSCS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>