force-app/main/default/objects/Opportunity/fields/Mens_Open__c.field-meta.xml
<CustomField>
    <fullName>Mens_Open__c</fullName>
    <description>Men&apos;s Open Teams</description>
    <label>Men&apos;s Open</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>