force-app/main/default/objects/Opportunity/fields/Mens_Social__c.field-meta.xml
<CustomField>
    <fullName>Mens_Social__c</fullName>
    <description>Number of Men&apos;s Social Registered</description>
    <inlineHelpText>Number of Men&apos;s Social Registered</inlineHelpText>
    <label>Men&apos;s Social</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>