force-app/main/default/objects/Opportunity/fields/Number_of_Fields_Rented__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Fields_Rented__c</fullName>
    <description>Number of Fields Rented. Only shows on Type = Venue Rental</description>
    <inlineHelpText>Number of Fields Rented. Only shows on Type = Venue Rental</inlineHelpText>
    <label>Number of Fields Rented</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>