force-app/main/default/objects/Opportunity/fields/Number_of_Referees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Referees__c</fullName>
    <description>Number of Referees. Only shows on Type = Referee Payment</description>
    <inlineHelpText>Number of Referees. Only shows on Type = Referee Payment</inlineHelpText>
    <label>Number of Referees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>