force-app/main/default/objects/Opportunity/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Payment Method used</description>
    <inlineHelpText>Payment Method used</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Method</valueSetName>
    </valueSet>
</CustomField>