force-app/main/default/objects/Opportunity/fields/Primary_Campaign_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Formula__c</fullName>
    <description>Read Only field using Formula since &apos;Primary Campaign Source&apos; isn&apos;t available natively from Salesforce</description>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read Only field using Formula since &apos;Primary Campaign Source&apos; isn&apos;t available natively from Salesforce</inlineHelpText>
    <label>Primary Campaign Formula</label>
    <type>Text</type>
</CustomField>