force-app/main/default/objects/Opportunity/fields/Questions_for_us__c.field-meta.xml
<CustomField>
    <fullName>Questions_for_us__c</fullName>
    <description>Online Tourney Registration field, team asking us a question</description>
    <inlineHelpText>Online Tourney Registration field, team asking us a question</inlineHelpText>
    <label>Questions for us?</label>
    <type>TextArea</type>
</CustomField>