force-app/main/default/objects/Opportunity/fields/Total_Teams_Entered__c.field-meta.xml
<CustomField>
    <fullName>Total_Teams_Entered__c</fullName>
    <description>Total teams entered across all divisions</description>
    <formula>Mens_Club__c + Mens_Open__c + Mens_Social__c + Mens_EGU__c + Mens_NSCS__c + Womens_Club__c + Womens_Social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total teams entered across all divisions</inlineHelpText>
    <label>Total Teams Entered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>