force-app/main/default/objects/Opportunity/fields/Tournament_College__c.field-meta.xml
<CustomField>
    <fullName>Tournament_College__c</fullName>
    <description>Indicates College 7&apos;s. Directly copied from the same field on Campaign record</description>
    <formula>Campaign.Tournament_College__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates College 7&apos;s. Directly copied from the same field on Campaign record</inlineHelpText>
    <label>Tournament - College</label>
    <type>Checkbox</type>
</CustomField>