force-app/main/default/objects/Opportunity/fields/Tournament_Hotel_Info__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Hotel_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you Interested in Hotel Accommodations?</description>
    <inlineHelpText>Are you Interested in Hotel Accommodations?</inlineHelpText>
    <label>Tournament Hotel Info?</label>
    <type>Checkbox</type>
</CustomField>