force-app/main/default/objects/Opportunity/fields/Tournament_Men_s__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Men_s__c</fullName>
    <description>Indicates Men&apos;s and Women&apos;s 7&apos;s. Directly copied from the same field on Campaign record</description>
    <formula>Campaign.Tournament_Men_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates Men&apos;s and Women&apos;s 7&apos;s. Directly copied from the same field on Campaign record</inlineHelpText>
    <label>Tournament - Men&apos;s</label>
    <type>Checkbox</type>
</CustomField>