force-app/main/default/objects/Opportunity/fields/Womens_Club__c.field-meta.xml
<CustomField>
    <fullName>Womens_Club__c</fullName>
    <description>Number of Women&apos;s Club Registered</description>
    <inlineHelpText>Number of Women&apos;s Club Registered</inlineHelpText>
    <label>Women&apos;s Club</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>