force-app/main/default/objects/Opportunity/fields/Womens_Social__c.field-meta.xml
<CustomField>
    <fullName>Womens_Social__c</fullName>
    <description>Number of Women&apos;s Social Registered</description>
    <inlineHelpText>Number of Women&apos;s Social Registered</inlineHelpText>
    <label>Women&apos;s Social</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>