force-app/main/default/objects/Opportunity/recordTypes/Tournament_Fee.recordType-meta.xml
<RecordType>
    <fullName>Tournament_Fee</fullName>
    <active>true</active>
    <businessProcess>Tournament Fee</businessProcess>
    <description>Tournament Fees and Entries</description>
    <label>Tournament Fee</label>
</RecordType>