force-app/main/default/objects/Opportunity/validationRules/Expenses_must_be_a_negative_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Expenses_must_be_a_negative_amount</fullName>
    <active>true</active>
    <description>Expenses must be a negative amount.</description>
    <errorConditionFormula>RecordType.Name = &apos;Expense&apos; &amp;&amp; Amount &gt; 0</errorConditionFormula>
    <errorMessage>Expenses must be a negative amount.</errorMessage>
</ValidationRule>