force-app/main/default/objects/Opportunity/listViews/X2024_Summer_7_s_Tournament_Entries.listView-meta.xml
<ListView>
    <fullName>X2024_Summer_7_s_Tournament_Entries</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Tournament_Fee</value>
    </filters>
    <filters>
        <field>Primary_Campaign_Formula__c</field>
        <operation>equals</operation>
        <value>2024 Saratoga Summer 7&apos;s - Revenue</value>
    </filters>
    <label>2024 Summer 7&apos;s Tournament Entries</label>
</ListView>